# AI-Agent

CrewAIAgent/novel_crew/: README.md  pyproject.toml
CrewAIAgent/novel_crew/novel_crew/: crew.py  main.py
CrewAIAgent/novel_crew/novel_crew/config/: agents.yaml  tasks.yaml
CrewAIAgent/novel_crew/novel_crew/tools/: __init__.py  image_tool.py
CustomerServiceAgent/: main.py  pyproject.toml
OpenAI-API/: generate-image.py  multi-model.py  openai-sdk.py  post-examples.json  pyproject.toml  request-api.py
ResearchPlannerAgent/: README.md  database.py  main.py  pyproject.toml
Travel Agent/travel_crew/: README.md  pyproject.toml
Travel Agent/travel_crew/travel_crew/: crew.py  main.py
Travel Agent/travel_crew/travel_crew/config/: agents.yaml  tasks.yaml
Travel Agent/travel_crew/travel_crew/tools/: search_tools.py
