[project]
name = "novel_crew"
version = "0.1.0"
description = "novel_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]
[project.scripts]
novel_crew = "novel_crew.main:run"
run_crew = "novel_crew.main:run"
train = "novel_crew.main:train"
replay = "novel_crew.main:replay"
test = "novel_crew.main:test"
run_with_trigger = "novel_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]